--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,27 +33,28 @@
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
     "test": "jest",
-    "lint": "biome lint --write src",
-    "format": "biome format --write src"
+    "lint": "eslint src",
+    "format": "prettier --write src/**/*.ts"
   },
   "dependencies": {
     "@mixedbread/sdk": "^0.6.0",
     "chalk": "^5.3.0",
-    "cli-table3": "^0.6.5",
     "commander": "^12.0.0",
-    "dotenv": "^16.4.5",
-    "glob": "^10.4.5",
-    "inquirer": "^9.2.23",
     "ora": "^8.0.1",
-    "yaml": "^2.4.5"
+    "cli-table3": "^0.6.5",
+    "inquirer": "^9.2.23",
+    "glob": "^10.4.5",
+    "yaml": "^2.4.5",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/inquirer": "^9.0.7",
-    "@types/jest": "^29.4.0",
     "@types/node": "^20.17.6",
+    "@types/inquirer": "^9.0.7",
+    "typescript": "5.8.3",
     "jest": "^29.4.0",
     "ts-jest": "^29.1.0",
-    "typescript": "5.8.3"
+    "@types/jest": "^29.4.0",
+    "eslint": "^9.20.1",
+    "prettier": "^3.0.0"
   }
 }
