--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -55,6 +55,11 @@
     "ts-jest": "^29.1.0",
     "@types/jest": "^29.4.0",
     "eslint": "^9.20.1",
+    "typescript-eslint": "8.31.1",
+    "@typescript-eslint/eslint-plugin": "8.31.1",
+    "@typescript-eslint/parser": "8.31.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "prettier": "^3.0.0"
   }
 }
