--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -39,27 +39,30 @@
   "dependencies": {
     "@mixedbread/sdk": "^0.6.0",
     "chalk": "^5.3.0",
-    "commander": "^12.0.0",
-    "ora": "^8.0.1",
     "cli-table3": "^0.6.5",
-    "inquirer": "^9.2.23",
+    "commander": "^12.0.0",
+    "dotenv": "^16.4.5",
     "glob": "^10.4.5",
+    "inquirer": "^9.2.23",
+    "mime-types": "^3.0.1",
+    "ora": "^8.0.1",
     "yaml": "^2.4.5",
-    "dotenv": "^16.4.5"
+    "zod": "^3.25.56"
   },
   "devDependencies": {
-    "@types/node": "^20.17.6",
     "@types/inquirer": "^9.0.7",
-    "typescript": "5.8.3",
-    "jest": "^29.4.0",
-    "ts-jest": "^29.1.0",
     "@types/jest": "^29.4.0",
-    "eslint": "^9.20.1",
-    "typescript-eslint": "8.31.1",
+    "@types/mime-types": "^3.0.1",
+    "@types/node": "^20.17.6",
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
+    "eslint": "^9.20.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "prettier": "^3.0.0"
+    "jest": "^29.4.0",
+    "prettier": "^3.0.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.31.1"
   }
 }
