--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -53,6 +53,7 @@
     "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.4.0",
     "@types/mime-types": "^3.0.1",
+    "@types/mock-fs": "^4.13.4",
     "@types/node": "^20.17.6",
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
@@ -60,6 +61,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-unused-imports": "^4.1.4",
     "jest": "^29.4.0",
+    "mock-fs": "^5.5.0",
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.0",
     "typescript": "5.8.3",
