--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -21,11 +21,10 @@
     "motion": "^12.17.3",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
-    "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
-    "rehype-prism-plus": "^2.0.1",
+    "react-shiki": "^0.7.1",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.63"
