--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -25,7 +25,9 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-shiki": "^0.7.1",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.63"
   },
