--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -35,7 +35,7 @@
     "test": "jest",
     "lint": "eslint src",
     "format": "prettier --write src/**/*.ts",
-    "mxbai": "node dist/bin/mxbai"
+    "mxbai": "npx tsx src/bin/mxbai.ts"
   },
   "dependencies": {
     "@mixedbread/sdk": "^0.9.1",
