--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,6 +1,11 @@
 {
   "packages": {
-    ".": {}
+    ".": {},
+    "packages/cli": {
+      "release-type": "node",
+      "package-name": "@mixedbread/cli",
+      "component": "cli"
+    }
   },
   "$schema": "https://raw.githubusercontent.com/stainless-api/release-please/main/schemas/config.json",
   "include-v-in-tag": true,
