--- a/packages/cli/build
+++ b/packages/cli/build
@@ -1,32 +1,55 @@
 #!/usr/bin/env bash
 set -exuo pipefail
 
-rm -rf dist; mkdir dist
+cd "$(dirname "$0")"
+
+# Clean and create dist directory
+rm -rf dist
+mkdir dist
 
 # Copy src to dist/src and build from dist/src into dist, so that
 # the source map for index.js.map will refer to ./src/index.ts etc
 cp -rp src README.md dist
 
+# Copy LICENSE from root if it exists
 for file in LICENSE; do
   if [ -e "../../${file}" ]; then cp "../../${file}" dist; fi
 done
 
+# Copy CHANGELOG if it exists locally
 for file in CHANGELOG.md; do
   if [ -e "${file}" ]; then cp "${file}" dist; fi
 done
 
-# this converts the export map paths for the dist directory
-# and does a few other minor things
+# Process and copy package.json to dist directory
 PKG_JSON_PATH=../../packages/cli/package.json node ../../scripts/utils/make-dist-package-json.cjs > dist/package.json
 
-# build to .js/.mjs/.d.ts files
+
+# Build to .js/.mjs/.d.ts files using tsc-multi
 ./node_modules/.bin/tsc-multi
 
 cp tsconfig.dist-src.json dist/src/tsconfig.json
 
 # Ensure the CLI has proper shebang line
+# The TypeScript compiler doesn't preserve shebangs, so we need to add it back
 if [ -f "dist/bin/mxbai.js" ]; then
+    # Add shebang if not present
+    if ! head -n 1 dist/bin/mxbai.js | grep -q "^#!/usr/bin/env node"; then
+        echo '#!/usr/bin/env node' | cat - dist/bin/mxbai.js > temp && mv temp dist/bin/mxbai.js
+    fi
+    # Make the CLI executable
     chmod +x dist/bin/mxbai.js
 fi
 
-DIST_PATH=./dist PKG_IMPORT_PATH=@mixedbread/cli/ node ../../scripts/utils/postprocess-files.cjs
+# Run postprocess-files script if available
+if [ -f "../../scripts/utils/postprocess-files.cjs" ]; then
+    DIST_PATH=./dist PKG_IMPORT_PATH=@mixedbread/cli/ node ../../scripts/utils/postprocess-files.cjs
+fi
+
+# Verify the build output
+if [ -f "dist/bin/mxbai.js" ]; then
+    echo "Build successful: CLI binary created at dist/bin/mxbai.js"
+else
+    echo "Build error: CLI binary not found"
+    exit 1
+fi
