--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mixedbread/cli",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "CLI tool for managing the Mixedbread platform.",
   "author": "Mixedbread <support@mixedbread.com>",
   "license": "Apache-2.0",
@@ -38,7 +38,9 @@
     "test": "jest",
     "lint": "eslint src",
     "format": "prettier --write src/**/*.ts",
-    "mxbai": "npx tsx src/bin/mxbai.ts"
+    "mxbai": "npx tsx src/bin/mxbai.ts",
+    "postinstall": "node ./scripts/postinstall.js",
+    "setup-cli": "node ./scripts/setup-cli.js"
   },
   "dependencies": {
     "@mixedbread/sdk": "^0.9.2",
