--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mixedbread/cli",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "CLI tool for managing the Mixedbread platform.",
   "author": "Mixedbread <support@mixedbread.com>",
   "license": "Apache-2.0",
@@ -52,6 +52,7 @@
     "inquirer": "^9.2.23",
     "mime-types": "^3.0.1",
     "ora": "^8.0.1",
+    "p-limit": "^6.2.0",
     "yaml": "^2.4.5",
     "zod": "^3.25.56"
   },
