Revert "chore: remove cli and mcp-server from release flow"
This reverts commit 684d90bcc4f3e5eb27ec357e4a2fd96d36fbb22d.

--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     inputs:
       path:
-        description: The path to run the release in, e.g. '.'
+        description: The path to run the release in, e.g. '.' or 'packages/mcp-server'
         required: true
 
   release:
@@ -34,7 +34,7 @@ jobs:
           if [ -n "${{ github.event.inputs.path }}" ]; then
             PATHS_RELEASED='[\"${{ github.event.inputs.path }}\"]'
           else
-            PATHS_RELEASED='[\".\"]'
+            PATHS_RELEASED='[\".\", \"packages/mcp-server\", \"packages/cli\"]'
           fi
           yarn tsn scripts/publish-packages.ts "{ \"paths_released\": \"$PATHS_RELEASED\" }"
         env:
