--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,6 +1,11 @@
 {
   "packages": {
-    ".": {}
+    ".": {},
+    "packages/cli": {
+      "release-type": "node",
+      "package-name": "@mixedbread/cli",
+      "component": "cli"
+    }
   },
   "$schema": "https://raw.githubusercontent.com/stainless-api/release-please/main/schemas/config.json",
   "include-v-in-tag": true,
@@ -62,6 +67,12 @@
   "release-type": "node",
   "extra-files": [
     "src/version.ts",
-    "README.md"
+    "README.md",
+    "packages/mcp-server/yarn.lock",
+    {
+      "type": "json",
+      "path": "packages/mcp-server/package.json",
+      "jsonpath": "$.version"
+    }
   ]
 }
